# haskell-text-segmentation

./: CHANGELOG.md  README.md  word-segmenter.cabal
app/: .ghc.environment.aarch64-darwin-8.10.7  CommonWords.hi  CommonWords.hs  HashedList.hi  HashedList.hs  Main.hs  WordSeg.hi  WordSeg.hs  large  main.hi  text
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
