cabal-version:      2.4
name:               word-segmenter
version:            0.1.0.0


-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             omaribrahim
maintainer:         omaribrahim@uchiago.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
                   , app/large
data-dir: app

executable word-segmenter
    main-is:          Main.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                      , vector
                      , hashable
    exposed-modules: WordSeg
                      , CommonWords
                      , HashedList
    hs-source-dirs:   app
    default-language: Haskell2010
